# weather_averaging

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  average_weather_description.md  slides.md  summary.md
scripts/: make_gifs.py  requirements.txt  sync_s3.sh
src/: averaging.cpp  averaging.hpp  config.hpp  io.cpp  io.hpp  main.cpp  types.hpp
tests/: CMakeLists.txt  test_averaging.cpp  test_io.cpp
